--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
             </ul>
         </div>
         <div class="hero section">
-
+            <div class="hero-content">
+                <div class="hero-title">This website is awesome</div>
+                <div class="hero-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button class="hero-signup">Sign up</button>
+            </div>
+            <img class="hero-image" src="#" alt="header image">
         </div>
         <div class="info section">
 
