Complete header and info sections

--- a/index.html
+++ b/index.html
@@ -21,10 +21,28 @@
                 <div class="hero-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                 <button class="hero-signup">Sign up</button>
             </div>
-            <img class="hero-image" src="#" alt="header image">
+            <img class="hero-image" src="img/nature.jpg" alt="header image">
         </div>
         <div class="info section">
-
+            <div class="info-title">Some random information.</div>
+            <div class="info-content">
+                <div class="info-frame">
+                    <img src="img/info1.jpg" class="info-image">
+                    <div class="info-text">this is some subtext under an illustration of an image</div>
+                </div>
+                <div class="info-frame">
+                    <img src="img/info2.jpg" class="info-image">
+                    <div class="info-text">this is some subtext under an illustration of an image</div>
+                </div>
+                <div class="info-frame">
+                    <img src="img/info3.jpg" class="info-image">
+                    <div class="info-text">this is some subtext under an illustration of an image</div>
+                </div>
+                <div class="info-frame">
+                    <img src="img/info4.jpg" class="info-image">
+                    <div class="info-text">this is some subtext under an illustration of an image</div>
+                </div>
+            </div>
         </div>
         <div class="testimonial section">
 
