--- a/index.html
+++ b/index.html
@@ -45,14 +45,20 @@
             </div>
         </div>
         <div class="testimonial section">
-            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quote"><i>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</i></div>
             <div class="author">-Thor, God of Thunder</div>
         </div>
         <div class="call section">
-
+            <div class="box">
+                <div class="call-text">
+                    <div class="call-title">Call to action! It's time!</div>
+                    <div class="call-subtitle">Sign up for our product by clicking that button over there!</div>
+                </div>
+                <button class="signup">Sign Up</button>
+            </div>
         </div>
         <div class="footer section">
-
+            Copyright © The Odin Project 2021
         </div>
     </body>
 </html>
